stryker/force-app/main/default/objects/Team__c/fields/Captain_of_Team__c.field-meta.xml
<CustomField>
    <fullName>Captain_of_Team__c</fullName>
    <label>Captain of Team</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>