stryker/force-app/main/default/objects/Team__c/fields/Number_of_Players__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Players__c</fullName>
    <label>Number of Players</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>