stryker/force-app/main/default/objects/Team__c/fields/Team_Owner__c.field-meta.xml
<CustomField>
    <fullName>Team_Owner__c</fullName>
    <label>Team Owner</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>