stryker/force-app/main/default/objects/Team__c/fields/Vise_Captain__c.field-meta.xml
<CustomField>
    <fullName>Vise_Captain__c</fullName>
    <label>Vise Captain</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>