stryker/force-app/main/default/objects/Team__c/listViews/owner.listView-meta.xml
<ListView>
    <fullName>owner</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>owner</label>
</ListView>